fix for #14
don't use URLDecoder for base64 encoded data.

also switched to the java.util.Base64 class.